config/nginx-test/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-test-route
  namespace: nginx-test
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`nginx-test.everythingascode.dev`)
      kind: Rule
      services:
        - name: nginx-test
          port: 80
  tls:
    secretName: nginx-test-tls
